style: changing pictures

--- a/index.html
+++ b/index.html
@@ -15,21 +15,13 @@
   </head>
   <body>
     <main>
-      <!-- <div>
-        <div class="container col-xxl-8 px-5 py-4 bg-secondary"></div>
-        <div class="row flex-lg-row align-items-left g-5 ">
-          <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./ramen.png" alt="Noodles" width="47px" >
-        </div>    
-        </div>
-        </div>
-      </div> -->
+      
       <div class="container col-xxl-8 px-5 py-4 bg-secondary">
         <div class="row flex-lg-row align-items-left g-5">
           <div class="col-10 col-sm-8 col-lg-6">
             <!--column on the left of the screen-->
             <img src="./ramen.png" alt="Noodles" width="47px" />
-            <h4 class="mt-5">Lorem ipsum dolor sit amet consectetur.</h4>
+            <h4 class="mt-5 ">Lorem ipsum dolor sit amet consectetur.</h4>
             <h5 class="mt-3">
               Lorem ipsum dolor sit, amet consectetur adipisicing elit.
               Quisquam, assumenda officia? Tempore.
@@ -91,8 +83,8 @@
       <div class="container col-xxl-8 px-5 py-4 bg-light">
         <div class="row d-flex">
           <div class="col-7">
-            <h5>Lorem, ipsum dolor.</h5>
-            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <h6 class="text-danger">Lorem, ipsum dolor.</h6>
+            <h5 class="text-warning">Lorem ipsum dolor sit amet consectetur.</h5>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
               distinctio ab minima fuga aut aspernatur enim, unde nostrum quod,
@@ -110,8 +102,8 @@
             <img src="./to-do-list.png" alt="list" height="110vh" />
           </div>
           <div class="col-7">
-            <h5>Lorem, ipsum dolor.</h5>
-            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <h6 class="text-danger">Lorem, ipsum dolor.</h6>
+            <h5 class="text-warning">Lorem ipsum dolor sit amet consectetur.</h5>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
               distinctio ab minima fuga aut aspernatur enim, unde nostrum quod,
@@ -124,8 +116,8 @@
       <div class="container col-xxl-8 px-5 py-4 bg-light">
         <div class="row d-flex">
           <div class="col-7">
-            <h5>Lorem, ipsum dolor.</h5>
-            <h3>Lorem ipsum dolor sit amet consectetur.</h3>
+            <h6 class="text-danger">Lorem, ipsum dolor.</h6>
+            <h5 class="text-warning">Lorem ipsum dolor sit amet consectetur.</h5>
             <p>
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro
               distinctio ab minima fuga aut aspernatur enim, unde nostrum quod,
@@ -133,7 +125,7 @@
             </p>
           </div>
           <div class="col-5 d-flex justify-content-center">
-            <img src="./speed-limit.png" alt="speedlimit" height="150vh" />
+            <img src="./50-percent.png" alt="speedlimit" height="150vh" />
           </div>
         </div>
         <hr />
@@ -142,47 +134,47 @@
         <div class="row d-flex justify-content-end">
           <h5 class="col-12 text-center mb-5">One to One</h5>
           <div class="col-4">
-            <h6>Lorem, ipsum.</h6>
-            <h5>Lorem ipsum dolor sit.</h5>
+            <h6 class="text-danger">Lorem, ipsum.</h6>
+            <h5 class="text-warning">Lorem ipsum dolor sit.</h5>
+            <p class="mb-2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+              commodi vero recusandae ab inventore quidem
+            </p>
+          </div>
+          <div class="col-2">
+            <img src="./speech-balloon.png" alt="" height="100vh" />
+          </div>
+          <div class="col-4">
+            <h6 class="text-danger">Lorem, ipsum.</h6>
+            <h5 class="text-warning">Lorem ipsum dolor sit.</h5>
+            <p class="mb-2">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
+              commodi vero recusandae ab inventore quidem
+            </p>
+          </div>
+          <div class="col-2">
+            <img src="./monitoring.png" alt="" height="100vh" />
+          </div>
+          <div class="col-4 mt-4">
+            <h6 class="text-danger">Lorem, ipsum.</h6>
+            <h5 class="text-warning">Lorem ipsum dolor sit.</h5>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
               commodi vero recusandae ab inventore quidem
             </p>
           </div>
-          <div class="col-2">
-            <img src="./speech-bubble.png" alt="" height="100vh" />
+          <div class="col-2 mt-5">
+            <img src="./pie-graph.png" alt="" height="100vh" />
           </div>
-          <div class="col-4">
-            <h6>Lorem, ipsum.</h6>
-            <h5>Lorem ipsum dolor sit.</h5>
+          <div class="col-4 mt-4">
+            <h6 class="text-danger">Lorem, ipsum.</h6>
+            <h5 class="text-warning">Lorem ipsum dolor sit.</h5>
             <p class="">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
               commodi vero recusandae ab inventore quidem
             </p>
           </div>
-          <div class="col-2">
-            <img src="./monitor.png" alt="" height="100vh" />
-          </div>
-          <div class="col-4">
-            <h6>Lorem, ipsum.</h6>
-            <h5>Lorem ipsum dolor sit.</h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-              commodi vero recusandae ab inventore quidem
-            </p>
-          </div>
-          <div class="col-2">
-            <img src="./graph.png" alt="" height="100vh" />
-          </div>
-          <div class="col-4">
-            <h6>Lorem, ipsum.</h6>
-            <h5>Lorem ipsum dolor sit.</h5>
-            <p class="">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum
-              commodi vero recusandae ab inventore quidem
-            </p>
-          </div>
-          <div class="col-2">
+          <div class="col-2 mt-5">
             <img src="./qa.png" alt="" height="100vh" />
           </div>
         </div>
