style: add round shapes on red btns

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               <li>Lorem ipsum dolor sit amet.</li>
               <li>Lorem ipsum dolor sit amet.</li>
             </ul>
-            <button type="button" class="btn btn-danger btn-sm">
+            <button type="button" class="btn btn-danger btn-sm rounded-pill">
               Main CTA Button
             </button>
             <button type="button" class="btn btn-secondary btn-sm">
@@ -71,7 +71,7 @@
             <button class="col-1 btn btn-light btn-sm text-secondary">
               More
             </button>
-            <button class="col-3 btn btn-danger btn-sm text-light">
+            <button class="col-3 btn btn-danger btn-sm text-light rounded-pill">
               Main CTA Button
             </button>
           </div>
@@ -281,7 +281,7 @@
 
       <div class="container col-xxl-8 px-5 bg-light">
         <div class="row d-flex justify-content-center">
-          <a href="" type="button" class="col-3 btn btn-danger btn-lg"
+          <a href="" type="button" class="col-3 btn btn-danger btn-lg rounded-pill"
             >BIG DADDY</a
           >
 
